--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -26,7 +26,7 @@ jobs:
   test-spm:
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [macos-latest, ubuntu-20.04]
 
     runs-on: ${{matrix.os}}
 
