--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -10,7 +10,7 @@ jobs:
   test-spm:
     strategy:
       matrix:
-        os: [ macos-latest ]
+        os: [ macos-11 ]
         swift-version: [ 5.4 ]
 
     runs-on: ${{matrix.os}}
@@ -48,7 +48,7 @@ jobs:
             fail_ci_if_error: true
 
   test-xcode:
-    runs-on: macos-latest
+    runs-on: macos-11
     strategy:
       matrix:
         action: [test]
