--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   publish-docs:
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
       - uses: maxim-lobanov/setup-xcode@v1.2.3
         with:
