--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -84,7 +84,7 @@ jobs:
           enable-code-coverage: true
           # parallel-testing-enabled: ${{matrix.parallel-testing-enabled}}
           # enable-code-coverage: ${{matrix.enable-code-coverage}}
-      - uses: sersoft-gmbh/xcode-coverage-action@main
+      - uses: sersoft-gmbh/xcode-coverage-action@v1.0.0
         id: xcode-cov
       - uses: codecov/codecov-action@v1.5.2
         with:
