--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
   publish-docs:
     needs: check-release
     if: ${{ needs.check-release.outputs.should-publish == 'true' }}
-    runs-on: ubunut-latest
+    runs-on: macos-11
     steps:
       - uses: maxim-lobanov/setup-xcode@v1.4.1
         if: runner.os == 'macOS'
@@ -55,9 +55,6 @@ jobs:
           key: ${{runner.os}}-${{steps.os-version.outputs.version}}-${{github.repository}}-spm-${{steps.swift-version.outputs.version}}-${{hashFiles('**/Package.resolved')}}
           restore-keys: |
             ${{runner.os}}-${{steps.os-version.outputs.version}}-${{github.repository}}-spm-${{steps.swift-version.outputs.version}}-
-      - name: Workaround Package.resolved format issues
-        if: ${{ startsWith(steps.swift-version.outputs.version, '5.5') }}
-        run: rm -rf Package.resolved
       - uses: sersoft-gmbh/swifty-docs-action@v1.2.1
         with:
           module-version: ${{needs.check-release.outputs.tag}}
