--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,16 +32,9 @@ jobs:
     if: ${{ needs.check-release.outputs.should-publish == 'true' }}
     runs-on: macos-11
     steps:
-      - uses: maxim-lobanov/setup-xcode@v1.4.1
-        if: runner.os == 'macOS'
+      - uses: fwal/setup-swift@v1.14.0
         with:
-          xcode-version: ^13.0
-      - name: Install Swift
-        if: runner.os == 'Linux'
-        uses: sersoft-gmbh/swifty-linux-action@v1.3.0
-        with:
-          release-version: 5.6
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          swift-version: '5.6'
       - name: Read OS Version
         uses: sersoft-gmbh/os-version-action@v1.0.0
         id: os-version
@@ -55,9 +48,16 @@ jobs:
           key: ${{runner.os}}-${{steps.os-version.outputs.version}}-${{github.repository}}-spm-${{steps.swift-version.outputs.version}}-${{hashFiles('**/Package.resolved')}}
           restore-keys: |
             ${{runner.os}}-${{steps.os-version.outputs.version}}-${{github.repository}}-spm-${{steps.swift-version.outputs.version}}-
-      - uses: sersoft-gmbh/swifty-docs-action@v1.2.1
+      - uses: sersoft-gmbh/swifty-docs-action@v2.0.0
+        env:
+          ENABLE_DOCC_SUPPORT: '1'
         with:
-          module-version: ${{needs.check-release.outputs.tag}}
+          package-version: ${{needs.check-release.outputs.tag}}
+          enable-inherited-docs: true
+          enable-index-building: false
+          transform-for-static-hosting: true
+          hosting-base-path: ${{github.event.repository.name}}
+          use-xcodebuild: false
           output: docs
       - uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
