--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -16,30 +16,24 @@ jobs:
     runs-on: ${{matrix.os}}
 
     steps:
-      - if: runner.os == 'macOS'
-        uses: maxim-lobanov/setup-xcode@v1.4.1
+      - uses: maxim-lobanov/setup-xcode@v1.4.1
+        if: runner.os == 'macOS'
         with:
           xcode-version: ^13.0
-      - name: Install Swift
-        if: runner.os == 'Linux'
-        uses: sersoft-gmbh/swifty-linux-action@v1.3.0
+      - uses: swift-actions/setup-swift@v1.15.0
+        id: swift-setup
         with:
-          release-version: ${{matrix.swift-version}}
-          platform: ${{matrix.os}}
-          github-token: ${{secrets.GITHUB_TOKEN}}
+          swift-version: '5.6'
       - name: Read OS Version
         uses: sersoft-gmbh/os-version-action@v1.0.0
         id: os-version
-      - name: Read Swift Version
-        uses: sersoft-gmbh/swift-version-action@v1.0.1
-        id: swift-version
       - uses: actions/checkout@v3.0.2
       - uses: actions/cache@v3.0.2
         with:
           path: .build
-          key: ${{runner.os}}-${{steps.os-version.outputs.version}}-${{github.repository}}-spm-${{steps.swift-version.outputs.version}}-${{hashFiles('**/Package.resolved')}}
+          key: ${{runner.os}}-${{steps.os-version.outputs.version}}-${{github.repository}}-spm-${{steps.swift-setup.outputs.version}}-${{hashFiles('**/Package.resolved')}}
           restore-keys: |
-            ${{runner.os}}-${{steps.os-version.outputs.version}}-${{github.repository}}-spm-${{steps.swift-version.outputs.version}}-
+            ${{runner.os}}-${{steps.os-version.outputs.version}}-${{github.repository}}-spm-${{steps.swift-setup.outputs.version}}-
       - name: Build & Test
         run: swift test -v --parallel --enable-code-coverage
       - name: Generate Coverage Files
