--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -21,9 +21,21 @@ jobs:
         with:
           xcode-version: ^13.0
       - uses: swift-actions/setup-swift@v1.15.0
-        id: swift-setup
+        # id: swift-setup
+        id: swift-setup-linux
         with:
           swift-version: ${{matrix.swift-version}}
+      # Workaround for https://github.com/swift-actions/setup-swift/issues/406
+      - uses: sersoft-gmbh/swift-version-action@v1
+        if: runner.os == 'macOS'
+        id: swift-setup-macos
+      - id: swift-setup
+        run: |
+          if [ '${{runner.os}}' == 'macOS' ]; then
+            echo "::set-output name=version::${{steps.swift-setup-macos.outputs.version}}"
+          else
+            echo "::set-output name=version::${{steps.swift-setup-linux.outputs.version}}"
+          fi
       - name: Read OS Version
         uses: sersoft-gmbh/os-version-action@v1.0.0
         id: os-version
