--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -17,18 +17,18 @@ jobs:
           - os: macos-12
             swift-version: ''
             xcode-version: '^14.0'
-          - os: ubuntu-20.04
-            swift-version: 5.5
-            xcode-version: ''
-          - os: ubuntu-20.04
-            swift-version: 5.6
-            xcode-version: ''
-          - os: ubuntu-20.04
-            swift-version: 5.7
-            xcode-version: ''
-          - os: ubuntu-22.04
-            swift-version: 5.7
-            xcode-version: ''
+          # - os: ubuntu-20.04
+          #   swift-version: 5.5
+          #   xcode-version: ''
+          # - os: ubuntu-20.04
+          #   swift-version: 5.6
+          #   xcode-version: ''
+          # - os: ubuntu-20.04
+          #   swift-version: 5.7
+          #   xcode-version: ''
+          # - os: ubuntu-22.04
+          #   swift-version: 5.7
+          #   xcode-version: ''
 
     runs-on: ${{matrix.os}}
 
