--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -99,7 +99,7 @@ jobs:
           scheme: app-groups
           destination: ${{ matrix.destination }}
           action: test
-          parallel-testing-enabled: true
+          parallel-testing-enabled: ${{ !contains(matrix.destination, 'watchOS') }}
           enable-code-coverage: true
           derived-data-path: .derived-data
       - uses: sersoft-gmbh/swift-coverage-action@v3.0.1
