--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -70,12 +70,12 @@ jobs:
     runs-on: macos-12
     strategy:
       matrix:
-        destination:
-          - platform=macOS
-          - platform=iOS Simulator,OS=latest,name=iPhone 13 Pro
-          - platform=iOS Simulator,OS=latest,name=iPad Pro (11-inch) (3rd generation)
-          - platform=tvOS Simulator,OS=latest,name=Apple TV 4K (2nd generation)
-          - platform=watchOS Simulator,OS=latest,name=Apple Watch Series 7 (45mm)
+        platform:
+          - macOS
+          - iOS
+          - iPadOS
+          - tvOS
+          - watchOS
     steps:
       - uses: maxim-lobanov/setup-xcode@v1.5.1
         with:
@@ -86,20 +86,53 @@ jobs:
       - name: Read Swift Version
         uses: sersoft-gmbh/swift-version-action@v2.0.1
         id: swift-version
+      - name: Select destination
+        id: destination
+        env:
+          PLATFORM: ${{ matrix.platform }}
+        run: |
+          DESTINATION=''
+          case "${PLATFORM}" in
+            'macOS')   DESTINATION='platform=macOS';;
+            'iOS')     DESTINATION='platform=iOS Simulator,OS=latest,name=iPhone 13 Pro';;
+            'iPadOS')  DESTINATION='platform=iOS Simulator,OS=latest,name=iPad Pro (11-inch) (3rd generation)';;
+            'tvOS')    DESTINATION='platform=tvOS Simulator,OS=latest,name=Apple TV 4K (2nd generation)';;
+            'watchOS') DESTINATION='platform=watchOS Simulator,OS=latest,name=Apple Watch Series 7 (45mm)';;
+            *) echo "::error title=Unknown platform!::Unknown platform: ${PLATFORM}" && exit 1;;
+          esac
+          echo "xcode=${DESTINATION}" >> "${GITHUB_OUTPUT}"
       - uses: actions/checkout@v3.1.0
       - uses: actions/cache@v3.0.11
         with:
-          path: .derived-data
-          key: ${{ runner.os }}-${{ steps.os-version.outputs.version }}-xcode-${{ steps.swift-version.outputs.version }}-${{ hashFiles('**/Package.resolved') }}
+          path: .build
+          key: ${{ runner.os }}-${{ steps.os-version.outputs.version }}-spm-${{ steps.swift-version.outputs.version }}-${{ hashFiles('**/Package.resolved') }}
           restore-keys: |
-            ${{ runner.os }}-${{ steps.os-version.outputs.version }}-xcode-${{ steps.swift-version.outputs.version }}-
+            ${{ runner.os }}-${{ steps.os-version.outputs.version }}-spm-${{ steps.swift-version.outputs.version }}-
+      - name: Work around PIF issues
+        env:
+          SCHEME_NAME: apple-device-information
+          DESTINATION: ${{ steps.destination.outputs.xcode }}
+          MAX_ATTEMPTS: 5
+        run: |
+          swift package dump-pif > /dev/null
+          ATTEMPT=0
+          while [ -z "${SUCCESS}" ] && [ "${ATTEMPT}" -le "${MAX_ATTEMPTS}" ]; do
+            xcodebuild clean -scheme "${SCHEME_NAME}" -destination "${DESTINATION}" | grep -q "CLEAN SUCCEEDED" && SUCCESS=true
+            ATTEMPT=$((ATTEMPT + 1))
+          done
+      - uses: actions/cache@v3.0.11
+        with:
+          path: .derived-data
+          key: ${{ runner.os }}-${{ steps.os-version.outputs.version }}-xcode-${{ steps.swift-version.outputs.version }}-${{ matrix.platform }}-${{ hashFiles('**/Package.resolved') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ steps.os-version.outputs.version }}-xcode-${{ steps.swift-version.outputs.version }}-${{ matrix.platform }}-
       - uses: sersoft-gmbh/xcodebuild-action@v2.0.1
         with:
           spm-package: './'
           scheme: app-groups
-          destination: ${{ matrix.destination }}
+          destination: ${{ steps.destination.outputs.xcode }}
           action: test
-          parallel-testing-enabled: ${{ !contains(matrix.destination, 'watchOS') }}
+          parallel-testing-enabled: ${{ matrix.platform != 'watchOS' }}
           enable-code-coverage: true
           derived-data-path: .derived-data
       - uses: sersoft-gmbh/swift-coverage-action@v3.0.1
