--- a/.github/workflows/swift-test.yml
+++ b/.github/workflows/swift-test.yml
@@ -76,6 +76,8 @@ jobs:
           - iPadOS
           - tvOS
           - watchOS
+    env:
+      XCODE_SCHEME: app-groups
     steps:
       - uses: maxim-lobanov/setup-xcode@v1.5.1
         with:
@@ -102,6 +104,7 @@ jobs:
           esac
           echo "xcode=${DESTINATION}" >> "${GITHUB_OUTPUT}"
       - uses: actions/checkout@v3.1.0
+      # PIF ISSUES: https://github.com/apple/swift-package-manager/issues/5767
       - uses: actions/cache@v3.0.11
         with:
           path: .build
@@ -110,16 +113,15 @@ jobs:
             ${{ runner.os }}-${{ steps.os-version.outputs.version }}-spm-${{ steps.swift-version.outputs.version }}-
       - name: Work around PIF issues
         env:
-          SCHEME_NAME: apple-device-information
           DESTINATION: ${{ steps.destination.outputs.xcode }}
-          MAX_ATTEMPTS: 5
         run: |
           swift package dump-pif > /dev/null
           ATTEMPT=0
-          while [ -z "${SUCCESS}" ] && [ "${ATTEMPT}" -le "${MAX_ATTEMPTS}" ]; do
-            xcodebuild clean -scheme "${SCHEME_NAME}" -destination "${DESTINATION}" | grep -q "CLEAN SUCCEEDED" && SUCCESS=true
+          while [ -z "${SUCCESS}" ] && [ "${ATTEMPT}" -le 5 ]; do
+            xcodebuild clean -scheme "${XCODE_SCHEME}" -destination "${DESTINATION}" | grep -q "CLEAN SUCCEEDED" && SUCCESS=true
             ATTEMPT=$((ATTEMPT + 1))
           done
+      # END PIF ISSUES
       - uses: actions/cache@v3.0.11
         with:
           path: .derived-data
@@ -129,7 +131,7 @@ jobs:
       - uses: sersoft-gmbh/xcodebuild-action@v2.0.1
         with:
           spm-package: './'
-          scheme: app-groups
+          scheme:  ${{ env.XCODE_SCHEME }}
           destination: ${{ steps.destination.outputs.xcode }}
           action: test
           parallel-testing-enabled: ${{ matrix.platform != 'watchOS' }}
