--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,22 @@
 .DS_Store
+
 /.build
-/.swiftpm
 /Packages
 /*.xcodeproj
 xcuserdata/
+DerivedData/
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
 
-.derived-data
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
